--- a/ToDo.txt
+++ b/ToDo.txt
@@ -2,6 +2,8 @@ Level Finished Scene
 Torch on head
 Red light Green Light
 Checkpoint
+Coloured blocks for coloured players
+Hidden Passages
 
 Main Menu
  	=> Level Selector
