--- a/ToDo.txt
+++ b/ToDo.txt
@@ -4,6 +4,7 @@ Red light Green Light
 Checkpoint
 Coloured blocks for coloured players
 Hidden Passages
+Breakable barrels(key and coins inside them)
 
 Main Menu
  	=> Level Selector
@@ -24,7 +25,7 @@ Level Design:
 		=> push button to increase timer level, speed run kinda shit
 		=> maths quiz using buttons level
 		=> press specific button which is shown in a screen,if failed reset the level, like piano tiles
-		=>
+		=>dsfs
 
 
 are ya winning son player intro or intro main menu scene idea
